@@ -75,6 +75,12 @@ These fields are currently available:
 
 Job arguments.
 
+=item attempts
+
+  attempts => 25
+
+Number of times performing this job will be attempted, defaults to C<1>.
+
 =item id
 
   id => '10023'
@@ -106,6 +112,12 @@ Enqueue a new job with C<inactive> state.
 These options are currently available:
 
 =over 2
+
+=item attempts
+
+  attempts => 25
+
+Number of times performing this job will be attempted, defaults to C<1>.
 
 =item delay
 
@@ -165,6 +177,12 @@ These fields are currently available:
   args => ['foo', 'bar']
 
 Job arguments.
+
+=item attempts
+
+  attempts => 25
+
+Number of times performing this job will be attempted, defaults to C<1>.
 
 =item created
 
