@@ -1,6 +1,6 @@
 requires 'perl' => '5.010001';
 requires 'DBI' => '0.88';
-requires 'Minion' => '2.05';
+requires 'Minion' => '3.02';
 requires 'Mojo::SQLite' => '0.018';
 requires 'Mojolicious' => '6.0';
 requires 'Sys::Hostname';
