@@ -1,4 +1,5 @@
 {{$NEXT}}
+  - Added support for retrying failed jobs automatically in Minion 3.01
 
 0.001     2015-10-28 21:59:55 EDT
   - First release
